--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -9,6 +9,12 @@
 % of the postcards I received so far is available online at 
 % http://postcards.miede.de
 % ****************************************************************************************************
+% !!! ATTENTION !!! ATTENTION !!! ATTENTION !!! ATTENTION !!!
+% This version was modified to comply with the formatting guidelines
+% of the Graduate Research School of La Trobe University.
+% ~ October 2018 / Matthias Langer (https://github.com/bashimao/ltu-thesis)
+% !!! ATTENTION !!! ATTENTION !!! ATTENTION !!! ATTENTION !!!
+% ****************************************************************************************************
 
 
 % ****************************************************************************************************
@@ -19,13 +25,12 @@
 \PassOptionsToPackage{utf8}{inputenc}
 	\usepackage{inputenc}
 
+
 % ****************************************************************************************************
 % 1. Configure classicthesis for your needs here, e.g., remove "drafting" below 
 % in order to deactivate the time-stamp on the pages
 % ****************************************************************************************************
-\PassOptionsToPackage{eulerchapternumbers,listings,drafting,%
-					 pdfspacing,%floatperchapter,%linedheaders,%
-					 subfig,beramono,eulermath,parts}{classicthesis}                                        
+\PassOptionsToPackage{eulerchapternumbers,listings,pdfspacing,subfig,beramono,dottedtoc}{classicthesis}
 % ********************************************************************
 % Available options for classicthesis.sty 
 % (see ClassicThesis.pdf for more information):
@@ -40,19 +45,8 @@
 % ****************************************************************************************************
 % 2. Personal data and user ad-hoc commands
 % ****************************************************************************************************
-\newcommand{\myTitle}{A Classic Thesis Style\xspace}
-\newcommand{\mySubtitle}{An Homage to The Elements of Typographic Style\xspace}
-\newcommand{\myDegree}{Doktor-Ingenieur (Dr.-Ing.)\xspace}
-\newcommand{\myName}{André Miede\xspace}
-\newcommand{\myProf}{Put name here\xspace}
-\newcommand{\myOtherProf}{Put name here\xspace}
-\newcommand{\mySupervisor}{Put name here\xspace}
-\newcommand{\myFaculty}{Put data here\xspace}
-\newcommand{\myDepartment}{Put data here\xspace}
-\newcommand{\myUni}{Put data here\xspace}
-\newcommand{\myLocation}{Saarbrücken\xspace}
-\newcommand{\myTime}{September 2015\xspace}
-\newcommand{\myVersion}{version 4.2\xspace}
+% moved to thesis.tex
+
 
 % ********************************************************************
 % Setup, finetuning, and useful commands
@@ -60,10 +54,10 @@
 \newcounter{dummy} % necessary for correct hyperlinks (to index, bib, etc.)
 \newlength{\abcd} % for ab..z string length calculation
 \providecommand{\mLyX}{L\kern-.1667em\lower.25em\hbox{Y}\kern-.125emX\@}
-\newcommand{\ie}{i.\,e.}
-\newcommand{\Ie}{I.\,e.}
-\newcommand{\eg}{e.\,g.}
-\newcommand{\Eg}{E.\,g.} 
+\newcommand{\ie}{i.\,e.\ }
+\newcommand{\Ie}{I.\,e.\ }
+\newcommand{\eg}{e.\,g.\ }
+\newcommand{\Eg}{E.\,g.\ }
 % ****************************************************************************************************
 
 
@@ -73,45 +67,41 @@
 % ******************************************************************** 
 % Packages with options that might require adjustments
 % ******************************************************************** 
-%\PassOptionsToPackage{ngerman,american}{babel}   % change this to your language(s)
-% Spanish languages need extra options in order to work with this template
-%\PassOptionsToPackage{spanish,es-lcroman}{babel}
-	\usepackage{babel}                  
+\PassOptionsToPackage{american}{babel}
+  \usepackage{babel}
 
 \usepackage{csquotes}
 \PassOptionsToPackage{%
-    %backend=biber, %instead of bibtex
-	backend=bibtex8,bibencoding=ascii,%
-	language=auto,%
-	style=numeric-comp,%
-    %style=authoryear-comp, % Author 1999, 2010
-    %bibstyle=authoryear,dashed=false, % dashed: substitute rep. author with ---
-    sorting=nyt, % name, year, title
-    maxbibnames=10, % default: 3, et al.
-    %backref=true,%
-    natbib=true % natbib compatibility mode (\citep and \citet still work)
+  backend=bibtex,
+  bibencoding=ascii,
+  language=auto,
+  style=alphabetic,
+  sorting=nyt,
+  maxbibnames=10,
+  natbib=true
 }{biblatex}
-    \usepackage{biblatex}
+  \usepackage{biblatex}
 
 \PassOptionsToPackage{fleqn}{amsmath}       % math environments and more by the AMS 
-    \usepackage{amsmath}
+  \usepackage{amsmath}
 
 % ******************************************************************** 
 % General useful packages
 % ******************************************************************** 
+\usepackage{amssymb}
+\usepackage{lipsum}
 \PassOptionsToPackage{T1}{fontenc} % T2A for cyrillics
-    \usepackage{fontenc}     
+    \usepackage{fontenc}
 \usepackage{textcomp} % fix warning with missing font shapes
-\usepackage{scrhack} % fix warnings when using KOMA with listings package          
-\usepackage{xspace} % to get the spacing after macros right  
+\usepackage{scrhack} % fix warnings when using KOMA with listings package  
+\usepackage{xspace} % to get the spacing after macros right
 \usepackage{mparhack} % get marginpar right
-\usepackage{fixltx2e} % fixes some LaTeX stuff --> since 2015 in the LaTeX kernel (see below)
 %\usepackage[latest]{latexrelease} % will be used once available in more distributions (ISSUE #107)
-\PassOptionsToPackage{printonlyused,smaller}{acronym} 
-    \usepackage{acronym} % nice macros for handling all acronyms in the thesis
-    %\renewcommand{\bflabel}[1]{{#1}\hfill} % fix the list of acronyms --> no longer working
-    %\renewcommand*{\acsfont}[1]{\textsc{#1}} 
-    \renewcommand*{\aclabelfont}[1]{\acsfont{#1}}
+\PassOptionsToPackage{printonlyused,smaller}{acronym}
+  \usepackage{acronym} % nice macros for handling all acronyms in the thesis
+  %\renewcommand{\bflabel}[1]{{#1}\hfill} % fix the list of acronyms --> no longer working
+  %\renewcommand*{\acsfont}[1]{\textsc{#1}}
+  \renewcommand*{\aclabelfont}[1]{\acsfont{#1}}
 % ****************************************************************************************************
 
 
@@ -119,9 +109,11 @@
 % 4. Setup floats: tables, (sub)figures, and captions
 % ****************************************************************************************************
 \usepackage{tabularx} % better tables
-    \setlength{\extrarowheight}{3pt} % increase table row height
+\setlength{\extrarowheight}{3pt} % increase table row height
 \newcommand{\tableheadline}[1]{\multicolumn{1}{c}{\spacedlowsmallcaps{#1}}}
 \newcommand{\myfloatalign}{\centering} % to be used with each float for alignment
+\usepackage{makecell}
+\usepackage{multirow}
 \usepackage{caption}
 % Thanks to cgnieder and Claus Lahiri
 % http://tex.stackexchange.com/questions/69349/spacedlowsmallcaps-in-caption-label
@@ -129,33 +121,33 @@
 %\DeclareCaptionLabelFormat{smallcaps}{\bothIfFirst{#1}{~}\MakeTextLowercase{\textsc{#2}}}
 %\captionsetup{font=small,labelformat=smallcaps} % format=hang,
 \captionsetup{font=small} % format=hang,
-\usepackage{subfig}  
+\usepackage{subfig}
 % ****************************************************************************************************
 
 
 % ****************************************************************************************************
 % 5. Setup code listings
 % ****************************************************************************************************
-\usepackage{listings} 
-%\lstset{emph={trueIndex,root},emphstyle=\color{BlueViolet}}%\underbar} % for special keywords
+\usepackage{listings}
+%\lstset{emph={trueIndex,root},emphstyle=\color{BlueViolet}}%\underbar} % For special keywords
 \lstset{language=[LaTeX]Tex,%C++,
-    morekeywords={PassOptionsToPackage,selectlanguage},
-    keywordstyle=\color{RoyalBlue},%\bfseries,
-    basicstyle=\small\ttfamily,
-    %identifierstyle=\color{NavyBlue},
-    commentstyle=\color{Green}\ttfamily,
-    stringstyle=\rmfamily,
-    numbers=none,%left,%
-    numberstyle=\scriptsize,%\tiny
-    stepnumber=5,
-    numbersep=8pt,
-    showstringspaces=false,
-    breaklines=true,
-    %frameround=ftff,
-    %frame=single,
-    belowcaptionskip=.75\baselineskip
-    %frame=L
-} 
+  morekeywords={PassOptionsToPackage,selectlanguage},
+  keywordstyle=\color{RoyalBlue},%\bfseries,
+  basicstyle=\small\ttfamily,
+  %identifierstyle=\color{NavyBlue},
+  commentstyle=\color{Green}\ttfamily,
+  stringstyle=\rmfamily,
+  numbers=left,
+  numberstyle=\scriptsize,%\tiny
+  stepnumber=5,
+  numbersep=8pt,
+  showstringspaces=false,
+  breaklines=true,
+  %frameround=ftff,
+  %frame=single,
+  belowcaptionskip=.75\baselineskip
+  %frame=L
+}
 % ****************************************************************************************************             
 
 
@@ -166,33 +158,39 @@
 % Using PDFLaTeX
 % ********************************************************************
 \PassOptionsToPackage{pdftex,hyperfootnotes=false,pdfpagelabels}{hyperref}
-    \usepackage{hyperref}  % backref linktocpage pagebackref
+\usepackage{hyperref}  % backref linktocpage pagebackref
 \pdfcompresslevel=9
-\pdfadjustspacing=1 
+\pdfadjustspacing=1
 \PassOptionsToPackage{pdftex}{graphicx}
     \usepackage{graphicx} 
- 
+
 
 % ********************************************************************
 % Hyperreferences
 % ********************************************************************
-\hypersetup{%
-    %draft, % = no hyperlinking at all (useful in b/w printouts)
-    colorlinks=true, linktocpage=true, pdfstartpage=3, pdfstartview=FitV,%
-    % uncomment the following line if you want to have black links (e.g., for printing)
-    %colorlinks=false, linktocpage=false, pdfstartpage=3, pdfstartview=FitV, pdfborder={0 0 0},%
-    breaklinks=true, pdfpagemode=UseNone, pageanchor=true, pdfpagemode=UseOutlines,%
-    plainpages=false, bookmarksnumbered, bookmarksopen=true, bookmarksopenlevel=1,%
-    hypertexnames=true, pdfhighlight=/O,%nesting=true,%frenchlinks,%
-    urlcolor=webbrown, linkcolor=RoyalBlue, citecolor=webgreen, %pagecolor=RoyalBlue,%
-    %urlcolor=Black, linkcolor=Black, citecolor=Black, %pagecolor=Black,%
-    pdftitle={\myTitle},%
-    pdfauthor={\textcopyright\ \myName, \myUni, \myFaculty},%
-    pdfsubject={},%
-    pdfkeywords={},%
-    pdfcreator={pdfLaTeX},%
-    pdfproducer={LaTeX with hyperref and classicthesis}%
-}   
+\hypersetup{breaklinks=true}
+\hypersetup{linktocpage=true}
+\hypersetup{colorlinks=true}
+\hypersetup{urlcolor=webbrown}
+\hypersetup{linkcolor=RoyalBlue}
+\hypersetup{citecolor=webgreen}
+\hypersetup{pageanchor=true}
+\hypersetup{plainpages=false}
+%\hypersetup{bookmarksnumbered=true}
+%\hypersetup{bookmarksopen=true}
+%\hypersetup{bookmarksopenlevel=true}
+%hypertexnames=true, nesting=true, frenchlinks
+\hypersetup{pdfstartpage=3}
+\hypersetup{pdfstartview=FitV}
+\hypersetup{pdfpagemode=UseNone}
+\hypersetup{pageanchor=true}
+\hypersetup{pdfpagemode=UseOutlines}
+\hypersetup{pdftitle={\myTitle}}
+\hypersetup{pdfauthor={\textcopyright\ \myFirstName\ \myLastName, \myUni, \myFaculty}}
+\hypersetup{pdfsubject={}}
+\hypersetup{pdfkeywords={deep learning, distributed computing, big data, apache spark, neural networks}}
+\hypersetup{pdfhighlight=/O}
+
 
 % ********************************************************************
 % Setup autoreferences
@@ -206,29 +204,29 @@
 % ********************************************************************
 \makeatletter
 \@ifpackageloaded{babel}%
-    {%
-       \addto\extrasamerican{%
-			\renewcommand*{\figureautorefname}{Figure}%
-			\renewcommand*{\tableautorefname}{Table}%
-			\renewcommand*{\partautorefname}{Part}%
-			\renewcommand*{\chapterautorefname}{Chapter}%
-			\renewcommand*{\sectionautorefname}{Section}%
-			\renewcommand*{\subsectionautorefname}{Section}%
-			\renewcommand*{\subsubsectionautorefname}{Section}%     
-                }%
-       \addto\extrasngerman{% 
-			\renewcommand*{\paragraphautorefname}{Absatz}%
-			\renewcommand*{\subparagraphautorefname}{Unterabsatz}%
-			\renewcommand*{\footnoteautorefname}{Fu\"snote}%
-			\renewcommand*{\FancyVerbLineautorefname}{Zeile}%
-			\renewcommand*{\theoremautorefname}{Theorem}%
-			\renewcommand*{\appendixautorefname}{Anhang}%
-			\renewcommand*{\equationautorefname}{Gleichung}%        
-			\renewcommand*{\itemautorefname}{Punkt}%
-                }%  
-            % Fix to getting autorefs for subfigures right (thanks to Belinda Vogt for changing the definition)
-            \providecommand{\subfigureautorefname}{\figureautorefname}%             
-    }{\relax}
+{%
+  \addto\extrasamerican{%
+    \renewcommand*{\figureautorefname}{Figure}%
+    \renewcommand*{\tableautorefname}{Table}%
+    \renewcommand*{\partautorefname}{Part}%
+    \renewcommand*{\chapterautorefname}{Chapter}%
+    \renewcommand*{\sectionautorefname}{Section}%
+    \renewcommand*{\subsectionautorefname}{Section}%
+    \renewcommand*{\subsubsectionautorefname}{Section}%
+  }%
+  \addto\extrasngerman{%
+    \renewcommand*{\paragraphautorefname}{Absatz}%
+    \renewcommand*{\subparagraphautorefname}{Unterabsatz}%
+    \renewcommand*{\footnoteautorefname}{Fu\"snote}%
+    \renewcommand*{\FancyVerbLineautorefname}{Zeile}%
+    \renewcommand*{\theoremautorefname}{Theorem}%
+    \renewcommand*{\appendixautorefname}{Anhang}%
+    \renewcommand*{\equationautorefname}{Gleichung}%
+    \renewcommand*{\itemautorefname}{Punkt}%
+  }%
+  % Fix to getting autorefs for subfigures right (thanks to Belinda Vogt for changing the definition)
+  \providecommand{\subfigureautorefname}{\figureautorefname}%
+}{\relax}
 \makeatother
 
 
@@ -238,7 +236,7 @@
 % ********************************************************************
 % Development Stuff
 % ********************************************************************
-\listfiles
+%\listfiles
 %\PassOptionsToPackage{l2tabu,orthodox,abort}{nag}
 %   \usepackage{nag}
 %\PassOptionsToPackage{warning, all}{onlyamsmath}
@@ -247,7 +245,7 @@
 % ********************************************************************
 % Last, but not least...
 % ********************************************************************
-\usepackage{classicthesis} 
+\usepackage{classicthesis}
 % ****************************************************************************************************
 
 
@@ -274,4 +272,54 @@
 %\usepackage[urw-garamond]{mathdesign} <-- no osf support :-(
 %\usepackage[default,osfigures]{opensans} % scale=0.95 
 %\usepackage[sfdefault]{FiraSans}
+% ****************************************************************************************************
+
+
+% ****************************************************************************************************
+% 9. LTU Extensions
+% ****************************************************************************************************
+\usepackage{colortbl}
+\usepackage{setspace}
+\usepackage{fp}
+\usepackage{soul}
+
+\usepackage{textcomp}
+
+\usepackage{pgfplots}
+\usepackage{pgfplotstable}
+\pgfplotsset{compat=newest}
+
+\usepackage[shortcuts]{extdash}
+%\usepackage{epigraph}
+
+\usepackage{tikz-timing}[2011/01/09]
+\usetikzlibrary{arrows, backgrounds, patterns, shapes}
+\usepackage{arydshln}
+
+\usepackage{algorithm}
+\usepackage{algorithmic}
+\newcommand{\algorithmautorefname}{Algorithm}
+
+\renewcommand{\lstlistlistingname}{List of Listings}
+
+\DeclareMathOperator*{\argmin}{argmin}
+\DeclareMathOperator*{\argmax}{argmax}
+
+\renewcommand{\rmdefault}{pnc}
+\renewcommand{\rmdefault}{pplx}
+
+\newcolumntype{L}[1]{>{\raggedright\arraybackslash}m{#1}}
+\newcolumntype{C}[1]{>{\centering\arraybackslash}m{#1}}
+\newcolumntype{R}[1]{>{\raggedleft\arraybackslash}m{#1}}
+
+\numberwithin{equation}{chapter}
+\numberwithin{figure}{chapter}
+\numberwithin{table}{chapter}
+\numberwithin{algorithm}{chapter}
+\sloppy
+
+\renewcommand{\bibfont}{\footnotesize}
+
+\newcommand{\hinttext}[1]{\textcolor{Gray!70!Red}{#1}}
+
 % ****************************************************************************************************
