Removed keywords of my thesis.

--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -188,7 +188,7 @@
 \hypersetup{pdftitle={\myTitle}}
 \hypersetup{pdfauthor={\textcopyright\ \myFirstName\ \myLastName, \myUni, \myFaculty}}
 \hypersetup{pdfsubject={}}
-\hypersetup{pdfkeywords={deep learning, distributed computing, big data, apache spark, neural networks}}
+\hypersetup{pdfkeywords={}}
 \hypersetup{pdfhighlight=/O}
 
 
