Corrected a couple of typos.

--- a/text/ch0-acknowledgements.tex
+++ b/text/ch0-acknowledgements.tex
@@ -13,4 +13,4 @@ Furthermore, I also want to thank all the members of the \emph{La Trobe student 
 
 I also want to thank my wife/husband/partner \textbf{Spouse's name}, who took care of our son/daughter/kids during the many days and nights that I spent at the university and made sure that I had a comfy home to go back to every day. And of course\textemdash{}last but not least\textemdash{}I want to thank my son/daughter/kids \textbf{Child Name 1}, \textbf{Child name 2} and \textbf{Child name 3} for \hinttext{... well, you should know why!}
 
-\hinttext{Hence, generally speaking, I would start with a blanket statement in the first paragraph. This way, you have covered all entities that are not explicitly named thereafter. Then, you should address all people that provided academic support (supervisor, co-supervisor, the research group, individuals that helped you). Then, give credit to the people that believed that you and supported your candidature before you actually started your research. In particular, I would suggest mentioning the 2-3 people that provided letters of support and the responsible research coordinator. Finally, add one paragraph for individuals that provided significant support that is not directly associated with your research (\eg you spouse/sweetheart).}
+\hinttext{Hence, generally speaking, I would start with a blanket statement in the first paragraph. This way, you have covered all entities that are not explicitly named thereafter. Then, you should address all people that provided academic support (supervisor, co-supervisor, the research group, individuals that helped you). Then, give credit to the people that believed in you and supported your candidature before you actually started your research. In particular, I would suggest mentioning the 2-3 people that provided letters of support and the responsible research coordinator. Finally, add one paragraph for individuals that provided significant support that is not directly associated with your research (\eg your spouse/sweetheart).}
