--- a/text/ch0-dedication.tex
+++ b/text/ch0-dedication.tex
@@ -7,7 +7,7 @@
 
 \hinttext{Dedicating to dissolved groups or deceased individuals is permissible. This section just has to make sense to you and the person or entity that you dedicate your work to.}
 
-\hinttext{However, others that read your thesis may see this. Keep in mind that your thesis will be archived and publicly visible. So, avoid anything that could be considered as \emph{problematic} or that could be \emph{misunderstood} by a third party. The dedication above is definitely a bad example!}
+\hinttext{However, others that read your thesis may see this. Keep in mind that your thesis will be archived and publicly visible. Avoid anything that could be considered as \emph{problematic} or that could be \emph{misunderstood} by a third party. The dedication above is definitely a bad example!}
 
 \vfill
 
