--- a/text/ch0-publications.tex
+++ b/text/ch0-publications.tex
@@ -8,7 +8,7 @@ This thesis includes work by the author that has been published or accepted for 
 In particular, some data, ideas, opinions and figures presented in this thesis have previously appeared or may appear shortly after the submission of this thesis as follows:
 \begin{itemize}
 
-  \item \hinttext{You MUST list all you publications that are quoted verbatim throughout your thesis here! Make sure this is complete to protect yourself from the accusation of academic misconduct. Self-plagiarism is also plagiarism! Make sure that you have the permission of the respective journals and your co-authors if you intend to quote passages from papers verbatim.}
+  \item \hinttext{You MUST list all publications that are quoted verbatim throughout your thesis here! Make sure this is complete to protect yourself from the accusation of academic misconduct. Self-plagiarism is also plagiarism! Make sure that you have the permission of the respective journals and your co-authors if you intend to quote passages from papers verbatim.}
   
   \item Feyd-Rautha Harkonnen, Glossu Rabban ``\textbf{How to use Ixian Probes to Extract Memories from Tleilaxu Masters}'' accepted for publication in \emph{Technological and Scientific Journal of the Spacing Guild}, ISSN: 1234-5678, DOI: \href{https://en.wikipedia.org/wiki/Spacing_Guild}{99.8765/SPACE.2018.312134}
   
