--- a/text/ch1.tex
+++ b/text/ch1.tex
@@ -1,4 +1,4 @@
-\hinttext{This is where the actual thesis begins. Explain the field of research and how your work fits in. Try to answer to the reader how your contributions add to it. However, keep this simple. Assume that the reader has only a very basic understanding of the field. Try to use lingo and terms that do not need to be explained. You may use forward references. But use them sparingly. You do not want the reader to frequently flip ahead 100 pages!}
+\hinttext{This is where the actual thesis begins. Explain the field of research and how your work fits in. Try to answer to the reader how your contributions provide new insights. However, keep this simple. Assume that the reader has only a very basic understanding of the field. Try to use lingo and terms that do not need to be explained. You may use forward references. But use them sparingly. You do not want the reader to frequently flip ahead 100 pages!}
 
 
 \section{Contributions}
@@ -25,11 +25,11 @@ The remainder of this thesis is organized as follows. \hinttext{Note: Depending 
 
   \item[Chapter \ref{c:Background}] provides background information relevant to the field of research. \hinttext{Provide details regarding topics and concepts that you will refer to throughout the thesis and that cannot be assumed to be already known by typical readers. A background chapter is not mandatory, but chances are that you need one. See \texttt{text/ch2.tex} for details.}
   
-  \item[Chapter \ref{c:Related-Works}] provides a detailed discussion of the major existing contributions to the field and how they relate to each other and our proposed algorithm ... \hinttext{This must be adapted depending to your research. See \texttt{text/ch3.tex} for details.}
+  \item[Chapter \ref{c:Related-Works}] provides a detailed discussion of the major existing contributions to the field and how they relate to each other and our proposed algorithm ... \hinttext{This must be adapted depending on your research. See \texttt{text/ch3.tex} for details.}
   
-  \item[Chapter \ref{c:Contribution-1}] details the properties and development of ... \hinttext{Write at least 1-2 sentences more to give an idea what your first major contribution chapter is about. See \texttt{text/ch4.tex} for details.}
+  \item[Chapter \ref{c:Contribution-1}] details the properties and development of ... \hinttext{Write at least 1-2 sentences more to give the reader an idea what your first major contribution chapter is about. See \texttt{text/ch4.tex} for details.}
   
-  \item[Chapter \ref{c:Contribution-2}] details the properties and development of the ... algorithm. \hinttext{Write at least 1-2 sentences more to give an idea what your second major contribution chapter is about. See \texttt{text/ch5.tex} for details.}
+  \item[Chapter \ref{c:Contribution-2}] details the properties and development of the ... algorithm. \hinttext{Write at least 1-2 sentences more to give readers an idea what your second major contribution chapter is about. See \texttt{text/ch5.tex} for details.}
   
   \hinttext{Expand this list if you have further contribution chapters.}
   
