--- a/text/ch5.tex
+++ b/text/ch5.tex
@@ -22,7 +22,7 @@ In case you want to use tables, use either \texttt{tabular} or \texttt{tabularx}
     Feyd-Rautha  &  19 & yes & Hey, that's me! \\
     Paul         &  18 & no  & Heir to House Atreides \\
     Valdimir     & 142 & yes & My boss! \\
-    Piter        & 242 & yes & Out Mentat \\
+    Piter        & 242 & yes & Our Mentat \\
     Shaddam IV.  & 156 & no  & Emperor of the known universe \\
     Thufir       & 261 & no  & Mentat of the Atreides
   \end{tabularx}
